[package]
name = "is_utf8"
version = "0.1.4"
license = "MIT OR Apache-2.0"
authors = ["Árni Dagur <arni@dagur.eu>"]
description = "Provides functions to determine if a sequence of bytes is valid utf-8."
repository = "https://github.com/ArniDagur/rust-isutf8"
edition = "2018"

[[bench]]
name = "validate-utf8"
path = "benchmarks/validate-utf8.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg dox" ]

[dev-dependencies]
criterion = "0.5"
